TestCases/Errors/threaded_movement/observations/win_10_obs.spm
 obs   15-5   0.000196232339089482 
 obs   16-5   0.000559085323667665 
 obs   15-6   0 
 obs   16-6   0.000436077900780066 
 obs   13-10   0.00214285714285714 
 obs   14-10   0.00219265350034581 
 obs   3-11   0.00115740740740741 
 obs   4-11   0.00590318772136954 
 obs   14-11   0.00191666666666667 
 obs   3-12   0.00405092592592593 
 obs   4-12   0.00887229889164303 
 obs   6-17   0.013468286099865 
 obs   7-17   0.0115053788351583 
 obs   8-17   0.01 
 obs   9-17   0.00875 
 obs   6-18   0.0142105263157895 
 obs   7-18   0.0134177631578947 
 obs   8-18   0.00963293650793651 
 obs   9-18   0.0136904761904762 
 obs   8-19   0.0102301587301587 
 obs   9-19   0.0113095238095238 
 obs   10-19   0.0129284657996396 
 obs   11-19   0.00771632188761047 
 obs   8-20   0.0214285714285714 
 obs   9-20   0.0105410352148766 
 obs   10-20   0.011345091834202 
 error_value   15-5   0 
 error_value   16-5   0 
 error_value   15-6   0 
 error_value   16-6   0 
 error_value   13-10   0 
 error_value   14-10   0 
 error_value   3-11   0 
 error_value   4-11   0 
 error_value   14-11   0 
 error_value   3-12   0 
 error_value   4-12   0 
 error_value   6-17   0 
 error_value   7-17   0 
 error_value   8-17   0 
 error_value   9-17   0 
 error_value   6-18   0 
 error_value   7-18   0 
 error_value   8-18   0 
 error_value   9-18   0 
 error_value   8-19   0 
 error_value   9-19   0 
 error_value   10-19   0 
 error_value   11-19   0 
 error_value   8-20   0 
 error_value   9-20   0 
 error_value   10-20   0 
